fixed too large text inputs on login page

--- a/login/login_style.css
+++ b/login/login_style.css
@@ -11,11 +11,6 @@ body {
     background-attachment:fixed;
 }
 
-#box {
-    width: 60vw;
-    height: 60vh;
-}
-
 #infobox {
     background-color: #172815;
     color: white;
